k8s/istiofeatures/circuit-breaker/1-destination-rule.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: service-c-circuit-breaker
  namespace: servicemesh-apps
spec:
  host: service-c
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
